# xtail

./: .gitignore  Makefile.in  README  acconfig.h  config.h.in  configure  configure.in  entryfuncs.c  miscfuncs.c  xtail.1  xtail.c  xtail.h  xtail_2.1.orig.tar.gz.delta  xtail_2.1.orig.tar.gz.id
debian/: TODO  changelog  control  copyright  rules  watch
debian/patches/: 020_iso-dates.patch  030_xtail.c.patch  040_miscfuncs.c.patch  previous.patch  series
debian/tests/: control
