dnl Process this file with autoconf to produce a configure script.
AC_INIT(xtail.c)
AC_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
if test "$GCC" = yes; then
    CFLAGS="-Wall $CFLAGS"
fi

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_DIRENT
AC_CHECK_HEADERS(stdlib.h unistd.h termios.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_STRUCT_TM

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(difftime strerror)

AC_OUTPUT(Makefile)
